Add random stripe connect refresh code support
